--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,4 +22,4 @@ jobs:
         repository: piotrstachyra/icarus
         tag_with_ref: true
         tags: latest
-        # push: ${{ startsWith(github.ref, 'refs/tags/') }}
+        push: ${{ startsWith(github.ref, 'refs/tags/') }}
