--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,5 @@ jobs:
         ruby-version: 2.6
     - name: Install dependencies
       run: bundle install
-#     - name: Run tests
-#       run: bundle exec rake
+    - name: Run tests
+      run: rspec tests
