--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,11 @@ jobs:
     - name: Set up cardano-wallet
       run: |
         rm docker-compose.yml
-        wget https://raw.githubusercontent.com/input-output-hk/cardano-wallet/master/docker-compose.yml
-        NETWORK=testnet docker-compose up --detach
+        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/docker-compose.yml
+        docker-compose up --detach
     - name: Run tests
       run: rspec tests
+    env:
+      NETWORK: testnet
+      WALLET: dev-master-byron
+      NODE: latest
