--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,13 +35,14 @@ jobs:
     - name: Set up cardano-wallet & cardano-node on Shelley testnet
       run: |
         wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/docker-compose-shelley.yml
-        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/shelley-testnet/shelley_testnet-config.json
-        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/shelley-testnet/shelley_testnet-genesis.json
-        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/shelley-testnet/shelley_testnet-topology.json
+        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/testnet/testnet-config.json
+        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/testnet/testnet-byron-genesis.json
+        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/testnet/testnet-shelley-genesis.json
+        wget https://raw.githubusercontent.com/piotr-iohk/cardano-wallet-rb/master/spec/testnet/testnet-topology.json
         NODE_CONFIG_PATH=`pwd` docker-compose -f docker-compose-shelley.yml up --detach
     - name: Run tests
       run: rspec tests
     env:
       NETWORK: testnet
       WALLET: dev-master-shelley
-      NODE: master
+      NODE: 1.18.0
