include vs: 2019 on windows

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,7 +9,8 @@ jobs:
   make:
     strategy:
       matrix:
-        os: [windows-2019]
+        - os: [windows-2019]
+          vs: 2019
       fail-fast: false
     runs-on: ${{ matrix.os }}
     env:
