--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -57,5 +57,5 @@ jobs:
       - name: 📎 Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: linux-exe
+          name: macos-exe
           path: bin
