--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,8 +9,9 @@ jobs:
   make:
     strategy:
       matrix:
-        - os: [windows-2019]
-          vs: 2019
+        include:
+          - os: windows-2019
+            vs: 2019
       fail-fast: false
     runs-on: ${{ matrix.os }}
     env:
@@ -25,12 +26,9 @@ jobs:
           choco install wget
 
       - name: Set up Ruby
-      # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-      # change this to (see https://github.com/ruby/setup-ruby#versioning):
-      # uses: ruby/setup-ruby@v1
-        uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
+          ruby-version: 2.7.1
 
       - name: "Install dependencies"
         run: bundle install
