change platform bin names

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -57,5 +57,5 @@ jobs:
       - name: 📎 Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: macos-exe
+          name: ${{ matrix.os }}-exe
           path: bin
