--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -73,5 +73,5 @@ jobs:
       - name: 📎 Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: windows-exe
+          name: ${{ matrix.os }}-exe
           path: bin
