--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -41,7 +41,8 @@ jobs:
         run: |
           wget https://github.com/pmq20/ruby-packer/releases/download/linux-x64/rubyc
           chmod +x ./rubyc
-          ./rubyc -v
+          mv rubyc ../rubyc
+          ../rubyc -v
 
       - name: Install dependencies
         run: bundle install
@@ -51,7 +52,7 @@ jobs:
           pwd
           ls
           mkdir bin
-          ./rubyc app.rb -o bin/ikar
+          ../rubyc app.rb -o bin/ikar
           chmod +x bin/ikar
 
       - name: 📎 Upload Artifact
