--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -65,9 +65,12 @@ jobs:
 
       - name: Build executable
         run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\${{ matrix.vs }}\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           dir
           mkdir bin
+          mkdir C:\rubyc_tmp
           rubyc.exe app.rb -o bin\ikar.exe --tmpdir=C:\rubyc_tmp
+        shell: cmd
 
       - name: 📎 Upload Artifact
         uses: actions/upload-artifact@v1
