--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,17 +11,36 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build and push docker
-      uses: docker/build-push-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASS }}
-        repository: piotrstachyra/icarus
-        tag_with_ref: true
-        tags: latest
-        push: ${{ startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/master')}}
+
+    - name: Get the tag
+      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      id: get_tag
+      run: |
+        echo $GITHUB_REF | cut -d / -f 3
+        echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
+    - name: Build and push on release
+      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      id: docker_build_release
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: piotrstachyra/icarus:latest,piotrstachyra/icarus:${{ steps.get_tag.outputs.VERSION }}
+
+    - name: Build and push on master
+      if: ${{ startsWith(github.ref, 'refs/heads/master')}}
+      id: docker_build_master
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: piotrstachyra/icarus:master
