--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,25 @@ version: "3.5"
 
 services:
   cardano-node:
-    image: inputoutput/cardano-node:latest
+    image: inputoutput/cardano-node:1.30.1
     environment:
       NETWORK:
     volumes:
       - node-${NETWORK}-db:/data
       - node-ipc:/ipc
-      - node-config:/nix/store
     restart: on-failure
 
   cardano-wallet:
-    image: inputoutput/cardano-wallet:latest
+    image: inputoutput/cardano-wallet:2021.9.29
     volumes:
       - wallet-${NETWORK}-db:/wallet-db
       - node-ipc:/ipc
-      - node-config:/config
     ports:
       - 8090:8090
     entrypoint: []
     command: bash -c "
         ([[ $$NETWORK == \"mainnet\" ]] && $$CMD --mainnet) ||
-        ([[ $$NETWORK == \"testnet\" ]] && $$CMD --testnet /config/*testnet-byron-genesis.json)
+        ($$CMD --testnet /config/${NETWORK}/genesis-byron.json)
       "
     environment:
       CMD: "cardano-wallet serve --node-socket /ipc/node.socket --database /wallet-db --listen-address 0.0.0.0"
@@ -30,14 +28,16 @@ services:
     restart: on-failure
 
   icarus:
-    image: piotrstachyra/icarus:latest
+    image: piotrstachyra/icarus:v2021-09-29
     network_mode: "host"
     restart: on-failure
 
 volumes:
   node-mainnet-db:
   node-testnet-db:
+  node-alonzo-purple-db:
   wallet-mainnet-db:
   wallet-testnet-db:
+  wallet-alonzo-purple-db:
   node-ipc:
   node-config:
