--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,5 +44,5 @@ jobs:
       CONFIG_URL: https://hydra.iohk.io/job/Cardano/cardano-node/cardano-deployment/latest-finished/download/1
       NETWORK: testnet
       WALLET: dev-master
-      NODE: alonzo-purple-1.0.1
+      NODE: 1.35.0
       TOKEN_METADATA: https://metadata.cardano-testnet.iohkdev.io/
