--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: "3.5"
 
 services:
   cardano-node:
-    image: inputoutput/cardano-node:1.35.3
+    image: inputoutput/cardano-node:1.35.3-configs
     environment:
       NETWORK:
     volumes:
-      - node-${NETWORK}-db:/data
+      - ikar-node-${NETWORK}-db:/data
       - node-ipc:/ipc
     restart: on-failure
 
   cardano-wallet:
     image: inputoutput/cardano-wallet:2022.8.16
     volumes:
-      - wallet-${NETWORK}-db:/wallet-db
+      - ikar-wallet-${NETWORK}-db:/wallet-db
       - node-ipc:/ipc
     ports:
       - 8090:8090
@@ -33,11 +33,11 @@ services:
     restart: on-failure
 
 volumes:
-  node-mainnet-db:
-  node-testnet-db:
-  node-alonzo-purple-db:
-  wallet-mainnet-db:
-  wallet-testnet-db:
-  wallet-alonzo-purple-db:
+  ikar-node-mainnet-db:
+  ikar-wallet-mainnet-db:
+  ikar-node-preprod-db:
+  ikar-wallet-preprod-db:
+  ikar-node-preview-db:
+  ikar-wallet-preview-db:
   node-ipc:
   node-config:
