--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,5 @@ jobs:
     env:
       CONFIG_URL: https://book.world.dev.cardano.org/environments/preview/
       WALLET: dev-master
-      NODE: 1.35.3-configs
+      NODE: 1.35.4
       TOKEN_METADATA: https://metadata.cardano-testnet.iohkdev.io/
